@@ -1,3 +1,8 @@
+2006-12-16  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* src/rbgnome-canvas-item.c: Fix Gnome::CanvasClipgroup#path property accessor. 
+	Gnome::CanvasItem.new can omit 2nd parameter(hash).
+
 2006-06-17  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* sample/canvas.rb: Remove Gtk.init.
